--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,17 @@
-org.gradle.jvmargs = -Xmx2G
-org.gradle.parallel = true
-org.gradle.caching = true
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx2G
 
-mod_version = 4.0.1
-target_version = 1.16.1
-archives_name = antiresourcereload
-maven_group = me.wurgo
+# Fabric Properties
+# check these on https://fabricmc.net/develop
+minecraft_version=1.16.1
+yarn_mappings=1.16.1+build.21
+loader_version=0.15.0
+
+# Mod Properties
+mod_version=1.3.0
+maven_group=me.wurgo
+archives_base_name=antiresourcereload
+
+# MCSR
+mod_id=antiresourcereload
+supported_versions=1.16.1
