--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,8 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs = -Xmx2G
+org.gradle.parallel = true
+org.gradle.caching = true
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.14.4
-yarn_mappings=1.14.4+build.18
-loader_version=0.12.12
-
-# Mod Properties
-mod_version=1.3.0
-maven_group=me.wurgo
-archives_base_name=antiresourcereload
-
-# MCSR
-mod_id=antiresourcereload
-supported_versions=1.14.4
+mod_version = 4.0.1
+target_version = 1.14.4
+archives_name = antiresourcereload
+maven_group = me.wurgo
