--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,26 @@
-name: "test"
-
+name: test
 on:
   push:
+    # ignores tags
+    branches:
+      - "**"
   pull_request:
+  workflow_dispatch:
 
 jobs:
-  test:
-    runs-on: "ubuntu-latest"
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
+      - name: checkout repository
+        uses: actions/checkout@v4
+      - name: validate gradle wrapper
+        uses: gradle/wrapper-validation-action@v2
+      - name: setup java
+        uses: actions/setup-java@v4
         with:
-          java-version: 17
-      - name: Build artifacts
-        run: ./gradlew build
+          distribution: "temurin"
+          java-version: 21
+      - name: build
+        run: |
+          chmod +x ./gradlew
+          ./gradlew build
