--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ org.gradle.parallel = true
 org.gradle.caching = true
 
 mod_version = 4.0.1
-target_version = 1.17.1-1.18.1
+target_version = 1.15.2
 archives_name = antiresourcereload
 maven_group = me.wurgo
